// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Theme: (header) should compile with module with subtitle 1`] = `
"[helper: breadcrumbs]

# Property: prop

[InterfaceItemA](interfaceitema.md).prop

[helper: toc]

[partial: members]
"
`;

exports[`Theme: (header) should compile with module without subtitle 1`] = `
"[helper: breadcrumbs]

# Namespace: namespaceA

[helper: toc]

[partial: members]
"
`;
